2011-05-26 Gregory L. Lee <lee218@llnl.gov>
	* examples/src/mpi_ringtopo.c : added option to sleep instead of hang
	* scripts/STATview.py : fixed temporal ordering handling of more than 10 comparisons (zero padding of TO strings)

2011-05-25 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : Bit remapRanksList now calculated from connected MRNet NetworkTopology object.  Added topologyChangeCb.  Now properly handles CP exit.
	* examples/src/rank_test.c : added new rank test

2011-05-20 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : adding recovery for BE exit with nodeRemovedCb, which recaculates remapRanksList.
	* scripts/STATview.py, scripts/STATGUI.py : moved helper functions to STAThelper.py

2011-05-12 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT.C : make STAT_TOPOLOGY_AUTO the default if none specified

2011-05-06 Gregory L. Lee <lee218@llnl.gov>
	* doc/src/statbench_example.sgml doc/src/statbench_options.sgml : updated STATBench documentation

2011-05-04 Gregory L. Lee <lee218@llnl.gov>
	* : tag version 1.1.0

2011-05-03 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATGUI.py : Create new STAT if == None for about dialog
	* scripts/STATGUI.in : Add exec_prefix variable to point to prefix

2011-05-02 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : Fix nodeList handling for when to read nodes.txt
	* src/STAT_FrontEnd.C, scripts/STATGUI.py : Query LMON for RM PID in launch case + GUI get launcher exe from launch command

2011-04-22 Gregory L. Lee <lee218@llnl.gov>
	* src/STATBench.C : Fixed arg list in call to launchMrnetTree
	* src/STAT_FrontEnd.[h, C] : applicationNodeSet_ renamed to applicationNodeMultiSet_.  communicationNodeList_ changed from list to set and renamed to communicationNodeSet_ to avoid duplicate entries.

2011-04-19 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.C : patch from Nathan Hjelm for BackEnd hostname matching

2011-04-14 Gregory L. Lee <lee218@llnl.gov>